--- a/index_list/restaurant_booking_history.html
+++ b/index_list/restaurant_booking_history.html
@@ -187,13 +187,13 @@
 
               <!-- Modal body -->
               <div class="detail_modal_body">
-                姓名：張哲偉 <br />
-                手機：0972607451<br />
-                電子郵件：jason8745@gmail.com <br />
-                訂位編號：00127 <br />
-                訂位人數：2人 <br />
-                訂位日期：2022/02/24 <br />
-                取位時間：20:00 <br />
+                姓名：江程哲 <br />
+                手機：0988512203<br />
+                電子郵件：mark8841@gmail.com <br />
+                訂位編號：00123 <br />
+                訂位人數：5人 <br />
+                訂位日期：2022/02/22 <br />
+                取位時間：19:30 <br />
                 備註：需要兒童座椅
               </div>
 
