--- a/index_list/restaurant_self_pick_up.html
+++ b/index_list/restaurant_self_pick_up.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>今日自取訂餐</title>
-
+  <title>今日自取</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -15,8 +14,7 @@
   <!-- mainstyle -->
   <link rel="stylesheet" href="css/style.css">
   <!-- index -->
-  <link rel="stylesheet" href="css/restaurant_self_pick_up.css">
-
+  <link rel="stylesheet" href="css/restaurant_today_booking.css ">
 
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
@@ -26,19 +24,24 @@
 <body>
   <!-- 導覽列 start -->
 
-  <div class="header_page"></div>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="LOGO"></a>
+      <div class="rwd_icon">
+        <a class="nav_a" href="list.html"><i class="fas fa-store"></i></a>
+        <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i></a>
+        <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i></a>
+      </div>
+    </nav>
+  </header>
 
   <!-- 導覽列 over -->
 
   <aside>
-    <div class="search">
-      <label for="search-box">搜尋</label>
-      <input type="text" name="search-box" placeholder="訂單編號">
-    </div>
     <div class="panel-group" id="accordion">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">預位管理</a>
+          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">訂位管理</a>
           </h4>
         </div>
         <div id="collapseOne" class="panel-collapse collapse in">
@@ -54,12 +57,12 @@
       </div>
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">訂位管理</a>
+          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">訂餐管理</a>
           </h4>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse in">
           <div class="little_title">
-            <a data-parent="#accordion" href="restaurant_today_booking.html">今日自取訂餐</a>
+            <a data-parent="#accordion" href="restaurant_self_pick_up.html">今日自取訂餐</a>
           </div>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse in">
@@ -72,40 +75,42 @@
   </aside>
 
   <div class="container">
+    <div class="search-bar">
+      <button>搜尋</button><input type="text" placeholder="訂單編號">
+    </div>
     <table class="table order_table">
       <thead>
         <tr>
           <th>已完成</th>
           <th>取餐編號</th>
           <th>取餐日期</th>
-          <th>訂餐姓名</th>
-          <th>訂餐金額</th>
+          <th>取餐姓名</th>
+          <th>取餐金額</th>
           <th>手機</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr id="test">
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 20px; height: 20px; margin-left: 15px;">
+                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;">
               </label>
             </div>
           </td>
-          <td>00001</td>
-          <td>16:30</td>
-          <td>郭美美</td>
-          <td>260</td>
-          <td>09001993412</td>
+          <td>00215</td>
+          <td>2022-02-24</td>
+          <td>19:00</td>
+          <td>張凱程</td>
+          <td>0912554774</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: 35px">
-              訂餐明細
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+              詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -50px">
+            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
+              style="border: 1px solid #403C3C;">
               取消
             </button>
           </td>
@@ -115,24 +120,101 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 20px; height: 20px; margin-left: 15px;" checked>
+                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;">
               </label>
             </div>
           </td>
-          <td>00001</td>
-          <td>16:30</td>
-          <td>郭美美</td>
-          <td>260</td>
-          <td>09001993412</td>
+          <td>00216</td>
+          <td>2022-02-24</td>
+          <td>20:00</td>
+          <td>張慧庭</td>
+          <td>0902135699</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: 35px">
-              訂餐明細
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+              詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -50px">
+            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
+              style="border: 1px solid #403C3C;">
+              取消
+            </button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked>
+              </label>
+            </div>
+          </td>
+          <td>00217</td>
+          <td>2022-02-23</td>
+          <td>18:30</td>
+          <td>李曉明</td>
+          <td>0918557110</td>
+          <td>
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+              詳細內容
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
+              style="border: 1px solid #403C3C;">
+              取消
+            </button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked>
+              </label>
+            </div>
+          </td>
+          <td>00218</td>
+          <td>2022-02-23</td>
+          <td>17:15</td>
+          <td>陳誠慶</td>
+          <td>0972110202</td>
+          <td>
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+              詳細內容
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
+              style="border: 1px solid #403C3C;" >
+              取消
+            </button>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked>
+              </label>
+            </div>
+          </td>
+          <td>00219</td>
+          <td>2022-02-23</td>
+          <td>16:30</td>
+          <td>劉宇慶</td>
+          <td>0968115202</td>
+          <td>
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
+              詳細內容
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal2"
+              style="border: 1px solid #403C3C;" >
               取消
             </button>
           </td>
@@ -144,25 +226,58 @@
             <div class="modal-content">
               <!-- Modal Header -->
               <div class="modal-header">
-                <h4 class="modal-title">訂單明細</h4>
+                <h3 class="modal-title">訂單明細</h3>
                 <button type="button" class="close" data-dismiss="modal"></button>
               </div>
 
               <!-- Modal body -->
               <div class="detail_modal_body">
-                姓名：李曉明 <br />
-                手機：0900-xxxxxx<br />
-                電子郵件：email@gmail.com <br />
-                <br />
-                訂位編號：00001 <br />
-                訂位人數：3人 <br />
-                訂位日期：2022/02/02 <br />
-                取位時間：17:30 <br />
+                姓名：張哲偉 <br />
+                手機：0972607451<br />
+                電子郵件：jason8745@gmail.com <br />
+                訂位編號：00127 <br />
+                訂位人數：2人 <br />
+                訂位日期：2022/02/24 <br />
+                取位時間：20:00 <br />
                 備註：需要兒童座椅
               </div>
 
               <!-- Modal footer -->
               <div class="modal-footer">
+                <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
+                  返回
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal fade" id="detailModal2">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <!-- Modal Header -->
+              <div class="modal-header">
+                <h3 class="modal-title">確定取消訂單嗎?</h3>
+                <button type="button" class="close" data-dismiss="modal"></button>
+              </div>
+
+              <!-- Modal body -->
+              <div class="detail_modal_body">
+                姓名：張哲偉 <br />
+                手機：0972607451<br />
+                電子郵件：jason8745@gmail.com <br />
+                訂位編號：00127 <br />
+                訂位人數：2人 <br />
+                訂位日期：2022/02/24 <br />
+                取位時間：20:00 <br />
+                備註：需要兒童座椅
+              </div>
+
+              <!-- Modal footer -->
+              <div class="modal-footer">
+                <button type="button" class="btn btn-lg btn-danger" data-dismiss="modal" onclick="myFunction()">
+                  確認取消 
+                </button>
                 <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
                   返回
                 </button>
@@ -187,6 +302,10 @@
       $(".header_page").load("header.html");
       $(".footer_page").load("footer.html");
     });
+
+    function myFunction() {
+      $("#test").addClass("test");
+    }
   </script>
 </body>
 
