--- a/index_list/orderdisaplay.html
+++ b/index_list/orderdisaplay.html
@@ -49,38 +49,31 @@
             </thead>
             <tbody>
                <tr>
-                  <td scope="row">團長</td>
-                  <td>餐點名稱<br>餐點名稱</td>
-                  <td>小辣<br>不要蔥、不要蒜</td>
-                  <td>1<br>1</td>
-                  <td>50<br>50</td>
+                  <td scope="row">李曉明</td>
+                  <td>西西里海鹽柴魚脆薯<br/>蕃茄羅勒起司搭頂級陳年油醋</td>
+                  <td><br/></td>
+                  <td>1<br/>2</td>
+                  <td>188<br>376</td>
                </tr>
                <tr>
-                  <td scope="row">團員</td>
-                  <td>餐點名稱</td>
-                  <td>小辣</td>
-                  <td>1</td>
-                  <td>50</td>
+                  <td scope="row">郭美美</td>
+                  <td>西西里海鹽柴魚脆薯<br>南義炸起司條</td>
+                  <td>加辣<br/></td>
+                  <td>1<br/>1</td>
+                  <td>288<br/>288</td>
                </tr>
                <tr>
-                  <td scope="row">團員</td>
-                  <td>餐點名稱</td>
-                  <td>小辣</td>
-                  <td>1</td>
-                  <td>50</td>
-               </tr>
-               <tr>
-                  <td scope="row">團員</td>
-                  <td>餐點名稱</td>
-                  <td>小辣</td>
-                  <td>1</td>
-                  <td>50</td>
+                  <td scope="row">陳家欣</td>
+                  <td>田園香橙鮮蝦蘿蔓鮮蔬<br>水相主廚私房湯品</td>
+                  <td><br />不要加蔥</td>
+                  <td>1<br/>1</td>
+                  <td>318<br />288</td>
                </tr>
 
                <tr style="font-size: 18px;">
                   <td scope="row" colspan="4" style="text-align: right;"><b>總金額</b></td>
                   <td>
-                     NT$ 250
+                     NT$ 1746
                   </td>
                </tr>
             </tbody>
@@ -107,14 +100,8 @@
                         </div>
                      </td>
                   </tr>
-
                   <tr>
                      <td><b>團長:李曉明</b></td>
-                  </tr>
-                  <tr>
-                     <td>
-                        <button type="button" class="btn_view">檢視已點清單</button>
-                     </td>
                   </tr>
                </tbody>
             </table>
