--- a/index_list/group_shoppingchar.html
+++ b/index_list/group_shoppingchar.html
@@ -331,7 +331,7 @@
         // })
 
         function btn_orderfinished() {
-            window.location.href = 'orderfinished.html';
+            window.location.href = 'group_orderfinished.html';
 
         }
     </script>
