--- a/index_list/orderpage.html
+++ b/index_list/orderpage.html
@@ -375,7 +375,8 @@
                         aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
-                <input type="text" value="不要辣、不要蔥...." />
+                <input type="text"/>
+                <p>範例：加辣、不要辣、蔥多、油醋多....</p>
             </div>
             <div class="modal-footer d-flex justify-content-center">
                 <button type="button" class="btn_cancel" data-dismiss="modal">取消</button>
@@ -503,10 +504,6 @@
         function topfunction() {
             document.documentElement.scrollTop = 0;
         }
-
-        // 商品分類列表:點選後跳到該分類
-
-        // 加入購物車button按下後，header購物車+1
 
         // 跳頁面
         function btncheckout() {
