--- a/index_list/orderdisaplay.html
+++ b/index_list/orderdisaplay.html
@@ -41,7 +41,7 @@
             <thead>
                <tr>
                   <th>名稱</th>
-                  <th>餐點名稱</th>
+                  <th class="foodname">餐點名稱</th>
                   <th class="text-nowrap">餐點備註</th>
                   <th>數量</th>
                   <th>金額</th>
@@ -50,21 +50,21 @@
             <tbody>
                <tr>
                   <td scope="row">李曉明</td>
-                  <td>西西里海鹽柴魚脆薯<br/>蕃茄羅勒起司搭頂級陳年油醋</td>
+                  <td class="foodname">西西里海鹽柴魚脆薯<br/>蕃茄羅勒起司搭頂級陳年油醋</td>
                   <td><br/></td>
                   <td>1<br/>2</td>
                   <td>188<br>376</td>
                </tr>
                <tr>
                   <td scope="row">郭美美</td>
-                  <td>西西里海鹽柴魚脆薯<br>南義炸起司條</td>
+                  <td class="foodname">西西里海鹽柴魚脆薯<br>南義炸起司條</td>
                   <td>加辣<br/></td>
                   <td>1<br/>1</td>
                   <td>288<br/>288</td>
                </tr>
                <tr>
                   <td scope="row">陳家欣</td>
-                  <td>田園香橙鮮蝦蘿蔓鮮蔬<br>水相主廚私房湯品</td>
+                  <td class="foodname">田園香橙鮮蝦鮮蔬<br>水相主廚私房湯品</td>
                   <td><br />不要加蔥</td>
                   <td>1<br/>1</td>
                   <td>318<br />288</td>
@@ -73,7 +73,7 @@
                <tr style="font-size: 18px;">
                   <td scope="row" colspan="4" style="text-align: right;"><b>總金額</b></td>
                   <td>
-                     NT$ 1746
+                     NT$ 1,746
                   </td>
                </tr>
             </tbody>
@@ -81,9 +81,8 @@
          <br><br>
 
          <div class="share_member col-md-3 rwd_share_member" id="ordermember_Sidebar">
-
             <table class="table share_member_table rwd_share_member_table"
-               style="font-size: 18px; width:50px; line-height: 1em; border: 1px solid #403c3c ; border-radius: 10%;">
+               style="font-size: 18px; width:50px; border: 1px solid #403c3c;">
                <tbody>
                   <tr class="close_btn">
                      <td style="color:#585555c5;">
