--- a/index_list/orderpage_group_order_on.html
+++ b/index_list/orderpage_group_order_on.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="LOGO"></a>
             <div class="nav_icon">
-                <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i>會員登入</a>
+                <a class="nav_a" href="member.html"><i class="fas fa-user-circle"></i>李曉明</a>
             </div>
             <div class="rwd_icon">
                 <a class="nav_a" href="list.html"><i class="fas fa-store"></i></a>
@@ -368,17 +368,29 @@
         </div>
     </div>
 
-    <!-- <div class="food_order_group d-flex flex-column">
-        <div class="d-flex justify-content-center">
-            <button class="group_button oval" data-toggle="modal" data-target="#order_group_modal">購物車</button>
+    <!-- 加入購物車之餐點備註 -->
+    <div class="modal fade" id="char_remark_modal" tabindex="-1" role="dialog" aria-labelledby="char_remark_modal_title"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title" id="char_remark_modal_title">餐點備註</h3><br>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                    <input type="text" />
+                    <p>範例：加辣、不要辣、蔥多、油醋多....</p>
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button type="button" class="btn_cancel" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn_yes" data-dismiss="modal">確定</button>
+                </div>
+            </div>
         </div>
-        <div class="d-flex justify-content-center">
-            <button id="checkout" onclick="btncheckout()">送出點餐</button>
-        </div>
-    </div> -->
-
+    </div>
     <!-- 揪團功能 -->
-    <div class="share_member col-md-3 rwd_share_member" id="ordermember_Sidebar">
+    <div class="share_member rwd_share_member" id="ordermember_Sidebar">
 
         <table class="table share_member_table rwd_share_member_table"
             style="font-size: 18px; width:50px; line-height: 1em; border: 1px solid #403c3c ; border-radius: 10%;">
@@ -442,6 +454,39 @@
             window.location.href = 'group_shoppingchar.html';
 
         }
+
+        // 數量加減
+        function qty() {
+            var aAdd = document.querySelectorAll(".add");
+            var sub = document.querySelectorAll(".sub");
+            for (var i = 0; i < aAdd.length; i++) {
+                aAdd[i].onclick = function () {
+                    var num = Number(this.previousElementSibling.value);
+                    num++;
+                    this.previousElementSibling.value = num;
+                    // var price = this.previousElementSibling.previousElementSibling.previousElementSibling.firstElementChild.innerHTML;
+                    // this.nextElementSibling.firstElementChild.innerHTML = price * num;
+                }
+            }
+            for (var i = 0; i < sub.length; i++) {
+                sub[i].onclick = function () {
+                    var num = Number(this.nextElementSibling.value);
+                    if (num > 1) {
+                        num--;
+                    }
+                    this.nextElementSibling.value = num;
+                    // var price = this.previousElementSibling.firstElementChild.innerHTML;
+                    // this.nextElementSibling.nextElementSibling.nextElementSibling.firstElementChild.innerHTML = price * num;
+                }
+            }
+
+        }
+
+        // 置頂按鈕:點選後回到頂端
+        function topfunction() {
+            document.documentElement.scrollTop = 0;
+        }
+
     </script>
 
 </body>
