--- a/index_list/restaurant_login_index.html
+++ b/index_list/restaurant_login_index.html
@@ -48,17 +48,17 @@
                         <div class="restaurant_management">
                             <div class="restaurant_order">
                                 <div class="restaurant_detail">
-                                    <h2><a href="">訂位管理</a></h2>
+                                    <h2><a href="restaurant_today_booking.html">訂位管理</a></h2>
                                 </div>
-                                <h3>今日訂位數: </h3>
-                                <h3>明日訂位數: </h3>
+                                <h3>今日訂位數: 2</h3>
+                                <h3>明日訂位數: 0</h3>
                             </div>
                             <div class="restaurant_order">
                                 <div class="restaurant_detail">
-                                    <h2><a href="">訂餐管理</a></h2>
+                                    <h2><a href="restaurant_self_pick_up.html">訂餐管理</a></h2>
                                 </div>
-                                <h3>待處理訂餐數: </h3>
-                                <h3>已完成訂單數: </h3>
+                                <h3>待處理訂餐數: 2</h3>
+                                <h3>已完成訂單數: 3</h3>
                             </div>
                         </div>
                     </div>
